--- a/RabbitMQSend/ExampleTests/ExampleTests.csproj
+++ b/RabbitMQSend/ExampleTests/ExampleTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UntiTest2.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
